--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@ layout: front
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail">
-            <h2>Pitch Workshop</h2>
-            <p>Learn how to pitch your idea at the hackathon.
-            <p>Thurs, Apr 20, 6:30pm
-            <p>Innovation Factory
-            <p><a class="btn btn-default" href="https://www.meetup.com/Hacking-Health-Hamilton/events/238089903/">Register on Meetup</a>
+            <h2>September MeetUp</h2>
+            <p>The First MeetUp for new season.
+            <p>Thurs, September. 21, 6:30pm, 2017
+            <p>TBD
+            <p><a class="btn btn-default" href="https://www.eventbrite.ca/e/the-first-meetup-for-new-season-tickets-37293814804">Register on Eventbrite</a>
         </div>
     </div>
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail" style="background-color: red; color: white;">
-            <h2>Hamilton Hackathon</h2>
-            <p>Pitch and build an app in one weekend and win prizes!
-            <p>April 28-30, 2017, Mohawk College
-            <p><a class="btn btn-default" href="https://www.eventbrite.ca/e/hacking-health-hamilton-hackathon-2017-tickets-32222130259">Buy tickets now!</a>
+            <h2>Hamilton Health Hackathon 2018</h2>
+            <p>Save a date!
+            <p>Feb. 2-4, 2018
+            <p>Location: TBD
         </div>
     </div>
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
@@ -29,7 +29,7 @@ layout: front
         <div class="thumbnail">
             <h2>Hamilton Health Innovation Week</h2>
             <p>Join health innovators as they turn inspiration into innovation!
-            <p>April 24-30
+            <p>April 24-30,2017
             <p><a class="btn btn-default" href="http://hamiltonhealthinnovationweek.ca">Details</a>
         </div>
     </div>
