1. Update to Oct Meetup event.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ layout: front
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail">
-            <h2>September MeetUp</h2>
+            <h2>October MeetUp</h2>
             <p>The First MeetUp for new season.
-            <p>Thurs, September. 21, 6:30pm, 2017
-            <p>TBD
+            <p>Thurs, October. 19, 6:30pm, 2017
+            <p>Rm OJN204, McMaster Continuing Education, 1 John ST N, Hamilton
             <p><a class="btn btn-default" href="https://www.eventbrite.ca/e/the-first-meetup-for-new-season-tickets-37293814804">Register on Eventbrite</a>
         </div>
     </div>
