--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ layout: front
             <h2>October MeetUp</h2>
             <p>The First MeetUp for new season.
             <p>Thurs, October. 19, 6:30pm, 2017
-            <p>Rm OJN204, McMaster Continuing Education, 1 John ST N, Hamilton
+            <p>Rm OJN204, McMaster Continuing Education, 1 James ST N, Hamilton
+            <p> Two speakers:Nik Počuča and Yasir Khalid
             <p><a class="btn btn-default" href="https://www.eventbrite.ca/e/the-first-meetup-for-new-season-tickets-37293814804">Register on Eventbrite</a>
         </div>
     </div>
