--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ layout: front
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail">
-            <h2>October MeetUp</h2>
-            <p>The First MeetUp for new season.
-            <p>Thurs, October. 19, 6:30pm, 2017
-            <p>Rm OJN204, McMaster Continuing Education, 1 James ST N, Hamilton
-            <p> Two speakers:Nik Počuča and Yasir Khalid
-            <p><a class="btn btn-default" href="https://www.eventbrite.ca/e/the-first-meetup-for-new-season-tickets-37293814804">Register on Eventbrite</a>
+            <h2>November MeetUp</h2>
+            <p>Hacking Health Hamilton November meetup: Big Image Data and Health Data.
+            <p>Thurs, November. 16, 6:30pm, 2017
+            <p>CoMotion on King, 115 King Street East, Hamilton
+            <p> Three Presentations come from Waterloo University, DFNet, Arinai
+            <p><a class="btn btn-default" href="https://www.meetup.com/Hacking-Health-Hamilton/events/244473024/">Register on Eventbrite</a>
         </div>
     </div>
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
@@ -28,10 +28,10 @@ layout: front
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail">
-            <h2>Hamilton Health Innovation Week</h2>
-            <p>Join health innovators as they turn inspiration into innovation!
-            <p>April 24-30,2017
-            <p><a class="btn btn-default" href="http://hamiltonhealthinnovationweek.ca">Details</a>
+            <h2>Hacking Health Hamilton New Year Meetup Jan 18, 2018</h2>
+            <p>Join us for health innovation!
+            <p>Jan 18, 2018
+            <p><a class="btn btn-default" href="https://www.meetup.com/Hacking-Health-Hamilton/events/244739671/">Details</a>
         </div>
     </div>
 </div>
@@ -52,10 +52,31 @@ layout: front
 
 <div class="row featurette">
     <div>
-        <h2 class="featurette-heading" id="news">News</h2>
+        <h2 class="featurette-heading" id="Hacking Health News">News</h2>
         <ul>
+            <li><a href="https://www.meetup.com/Hacking-Health-Hamilton/events/243534073/">FIRST MEETUP OF THE NEW SEASON- HHH, October 19, 2017.
             <li><a href="http://www.thespec.com/news-story/7202040-build-a-health-app-in-a-weekend-at-hamilton-event/">Build a health app in a weekend at Hamilton event</a>
                 - The Hamilton Spectator, Mar 22, 2017.
+        </ul>
+    </div>
+</div>
+    
+    <div class="row featurette">
+    <div>
+        <h2 class="featurette-heading" id=Our Speakers Stories">News</h2>
+        <ul>
+            <li><a href="http://kimia.uwaterloo.ca/kimia_lab_team.html">Big Image Data: Tagging For Recognition--Professor H.R.Tizhoosh in Waterloo University.
+            <li><a href="https://www.linkedin.com/company/25034322/">Key Challenges Of Clinical Trials Data Management--Eric Bosch, the Director of Software Development at DF/Net Software. 
+            <li><a href="http://arinai.com/">Restoring Patient Independence And Improving Quality Of Care --Mohamed Ibrahim, Nadia Ashoori and Robert Zeni.                                                        
+        </ul>
+    </div>
+</div>
+                                            
+                                            <div class="row featurette">
+    <div>
+        <h2 class="featurette-heading" id=Local Information">News</h2>
+        <ul>
+            <li><a href="">We are glad to share your recruiting or other inforamtion here.
         </ul>
     </div>
 </div>
