--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@ layout: front
     <div>
         <h2 class="featurette-heading" id=Our Speakers Stories">News</h2>
         <ul>
-            <li><a href="http://kimia.uwaterloo.ca/kimia_lab_team.html">Big Image Data: Tagging For Recognition--Professor H.R.Tizhoosh in Waterloo University.
-            <li><a href="https://www.linkedin.com/company/25034322/">Key Challenges Of Clinical Trials Data Management--Eric Bosch, the Director of Software Development at DF/Net Software. 
-            <li><a href="http://arinai.com/">Restoring Patient Independence And Improving Quality Of Care --Mohamed Ibrahim, Nadia Ashoori and Robert Zeni.                                                        
+            <li><a href="http://kimia.uwaterloo.ca/kimia_lab_team.html">Big Image Data: Tagging For Recognition</a>--Professor H.R.Tizhoosh in Waterloo University.
+            <li><a href="https://www.linkedin.com/company/25034322/">Key Challenges Of Clinical Trials Data Management</a>--Eric Bosch, the Director of Software Development at DF/Net Software. 
+            <li><a href="http://arinai.com/">Restoring Patient Independence And Improving Quality Of Care </a>--Mohamed Ibrahim, Nadia Ashoori and Robert Zeni.                                                        
         </ul>
     </div>
 </div>
                                             
-                                            <div class="row featurette">
+ <div class="row featurette">
     <div>
         <h2 class="featurette-heading" id=Local Information">News</h2>
         <ul>
-            <li><a href="">We are glad to share your recruiting or other inforamtion here.
+            <li><a href="">We are glad to share your recruiting or other inforamtion here</a>.
         </ul>
     </div>
 </div>
