--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: front
 
 <div class="row featurette">
     <div>
-        <h2 class="featurette-heading" id="Hacking Health News">News</h2>
+        <h2 class="featurette-heading" id="news">News</h2>
         <ul>
             <li><a href="https://www.meetup.com/Hacking-Health-Hamilton/events/243534073/">FIRST MEETUP OF THE NEW SEASON- HHH, October 19, 2017.
             <li><a href="http://www.thespec.com/news-story/7202040-build-a-health-app-in-a-weekend-at-hamilton-event/">Build a health app in a weekend at Hamilton event</a>
@@ -63,7 +63,7 @@ layout: front
     
     <div class="row featurette">
     <div>
-        <h2 class="featurette-heading" id=Our Speakers Stories">News</h2>
+        <h2 class="featurette-heading" id="speakers">Our Speakers Stories</h2>
         <ul>
             <li><a href="http://kimia.uwaterloo.ca/kimia_lab_team.html">Big Image Data: Tagging For Recognition</a>--Professor H.R.Tizhoosh in Waterloo University.
             <li><a href="https://www.linkedin.com/company/25034322/">Key Challenges Of Clinical Trials Data Management</a>--Eric Bosch, the Director of Software Development at DF/Net Software. 
@@ -74,7 +74,7 @@ layout: front
                                             
  <div class="row featurette">
     <div>
-        <h2 class="featurette-heading" id=Local Information">News</h2>
+        <h2 class="featurette-heading" id="localinfor">Local Information</h2>
         <ul>
             <li><a href="">We are glad to share your recruiting or other inforamtion here</a>.
         </ul>
