Add a link of Newsletter

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: front
 
 <div class="row featurette">
     <div>
-        <h2 class="featurette-heading" id="news">Newsletter</h2>
+        <h2 class="featurette-heading" id="news" href="https://www.http://hhhamilton.ca/emerald/">Newsletter</h2>
         <ul>
             <li><a href="https://www.http://hhhamilton.ca/emerald/">Hacking Health Hamilton-Newsletters.</a>
         </ul>
@@ -75,7 +75,7 @@ layout: front
     <div>
         <h2 class="featurette-heading" id="localinfor">Local Information</h2>
         <ul>
-            <li><a href="">We are glad to share your recruiting or other inforamtion here</a>.
+            <li><a href="">We are glad to share your recruiting or other information here</a>.
         </ul>
     </div>
 </div>
