temp using a subdomain to support nesletter, but ima needs fixxed

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ layout: front
 
 <div class="row featurette">
     <div>
-        <h2 class="featurette-heading" id="news" href="https://www.http://hhhamilton.ca/emerald/">Newsletter</h2>
+        <h2 class="featurette-heading" id="news">Newsletter</h2>
         <ul>
-            <li><a href="https://www.http://hhhamilton.ca/emerald/">Hacking Health Hamilton-Newsletters.</a>
+            <li><a href="http://www.ucodingplus.com/emerald/">Hacking Health Hamilton-Newsletters Board.</a>
         </ul>
     </div>
 </div>
