Add newsletter blog link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: front
     <div>
         <h2 class="featurette-heading" id="news">Newsletter</h2>
         <ul>
-            <li><a href="http://www.ucodingplus.com/emerald/">Hacking Health Hamilton-Newsletters Board.</a>
+            <li><a href="http://hhhamilton.ca/newsletter/">Hacking Health Hamilton-Newsletters Board.</a>
         </ul>
     </div>
 </div>
