--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@ layout: front
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail">
-            <h2>November MeetUp</h2>
-            <p>Hacking Health Hamilton November meetup: Big Image Data and Health Data.
-            <p>Thurs, November. 16, 6:30pm, 2017
-            <p>CoMotion on King, 115 King Street East, Hamilton
-            <p> Three Presentations come from Waterloo University, DFNet, Arinai
-            <p><a class="btn btn-default" href="https://www.meetup.com/Hacking-Health-Hamilton/events/244473024/">Register on Eventbrite</a>
+            <h2>January MeetUp 2018</h2>
+            <p>Hacking Health Hamilton January meetup: Managing Diabetes & Printing Body Parts.
+            <p>Thurs, January. 18, 6:30pm, 2018
+            <p>Innovation Factory - McMaster Innovation Park
+            <p>101A-175 Longwood Road South · Hamilton, ON
+            <p> Two Presentations come from McMaster University, Mohawk 3D Printing Group
+            <p><a class="btn btn-default" href="https://www.meetup.com/Hacking-Health-Hamilton/events/244739671/">Register on Eventbrite</a>
         </div>
     </div>
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
@@ -29,10 +30,9 @@ layout: front
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail">
-            <h2>Hacking Health Hamilton New Year Meetup Jan 18, 2018</h2>
-            <p>Join us for health innovation!
-            <p>Jan 18, 2018
-            <p><a class="btn btn-default" href="https://www.meetup.com/Hacking-Health-Hamilton/events/244739671/">Register</a>
+            <h2>Hacking Health Hackathon 2018 -- Hamilton Site</h2>
+            <p>Sparkboard!
+            <p><a class="btn btn-default" href="https://hhhamilton2018.sparkboard.com/">Check Sparkboard</a>
         </div>
     </div>
 </div>
