Update the main info boxes

--- a/index.html
+++ b/index.html
@@ -7,36 +7,31 @@ layout: front
 <div class="row">
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
-        <div class="thumbnail">
-            <h2>January MeetUp 2018</h2>
-            <p>Hacking Health Hamilton January meetup: Managing Diabetes & Printing Body Parts.
-            <p>Thurs, January. 18, 6:30pm, 2018
-            <p>Innovation Factory - McMaster Innovation Park
-            <p>101A-175 Longwood Road South · Hamilton, ON
-            <p> Two Presentations come from McMaster University, Mohawk 3D Printing Group
-            <p><a class="btn btn-default" href="https://www.meetup.com/Hacking-Health-Hamilton/events/244739671/">Register on Eventbrite</a>
-        </div>
-    </div>
-    <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
-        <div class="dummy" /></div>
         <div class="thumbnail" style="background-color: red; color: white;">
             <h2>Hamilton Health Hackathon 2018</h2>
-            <p>Save a date!
+            <p>Pitch ideas, form teams, expert advice, and prototypes in one weekend.
             <p>Feb. 9-11, 2018
             <p>Location: McMaster Innovation Park
-			<p><a class="btn btn-default" href="https://www.eventbrite.ca/e/hacking-health-hamilton-hackthon-2018-tickets-41130549581?aff=ehomecard">Register</a>
+            <p><a class="btn btn-default" href="https://www.eventbrite.ca/e/hacking-health-hamilton-hackthon-2018-tickets-41130549581?aff=ehomecard">Info &amp; Tickets</a>
         </div>
     </div>
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail">
-            <h2>Hacking Health Hackathon 2018 -- Hamilton Site</h2>
-            <p>Sparkboard!
-            <p><a class="btn btn-default" href="https://hhhamilton2018.sparkboard.com/">Check Sparkboard</a>
+            <h2>Hackathon 2018 Sparkboard</h2>
+            <p>View ideas and express interest in projects on our Sparkboard.
+            <p><a class="btn btn-default" href="https://hhhamilton2018.sparkboard.com/">2018 Sparkboard</a>
+        </div>
+    </div>
+    <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
+        <div class="dummy" /></div>
+        <div class="thumbnail">
+            <h2>Nov 2017 Newsletter</h2>
+            <p>At our Nov 2017 meetup we had Eric Bosch from DF/Net, Hamid Tizhoosh on Big Data, and local heros Arinai.
+            <p><a class="btn btn-default" href="http://hhhamilton.ca/newsletter/Meetup-Nov">View Newsletter</a>
         </div>
     </div>
 </div>
-
 
 <hr class="featurette-divider">
 
