--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ layout: front
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail" style="background-color: red; color: white;">
-            <h2>Hamilton Health Hackathon 2018</h2>
-            <p>Pitch ideas, form teams, expert advice, and prototypes in one weekend.
-            <p>Feb. 9-11, 2018
-            <p>Location: McMaster Innovation Park
-            <p><a class="btn btn-default" href="https://www.eventbrite.ca/e/hacking-health-hamilton-hackthon-2018-tickets-41130549581?aff=ehomecard">Info &amp; Tickets</a>
+            <h2>Save the Date: Hacking Health Meetup March</h2>
+            <p>Meetup.
+            <p>March. 22, 2018
+            <p>Location: TBD
+            <p><a class="btn btn-default" href="https://www.meetup.com/Hacking-Health-Hamilton/events/246993621/">Info &amp; Tickets</a>
         </div>
     </div>
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
@@ -26,9 +26,9 @@ layout: front
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail">
-            <h2>Nov 2017 Newsletter</h2>
-            <p>At our Nov 2017 meetup we had Eric Bosch from DF/Net, Hamid Tizhoosh on Big Data, and local heros Arinai.
-            <p><a class="btn btn-default" href="http://hhhamilton.ca/newsletter/Meetup-Nov">View Newsletter</a>
+            <h2>Hackathon 2018 Newsletter</h2>
+            <p> Hackathon 2018 was a fabulous success despite the weather! Check more information.
+            <p><a class="btn btn-default" href="http://hhhamilton.ca/newsletter">View Newsletter</a>
         </div>
     </div>
 </div>
@@ -48,6 +48,7 @@ layout: front
     <div>
         <h2 class="featurette-heading" id="news">News</h2>
         <ul>
+            <li><a href="https://cable14now.com/video-on-demand/video/?videoId=2702">An Interview:City Matters Hacking Health (Feb 5 2018).</a></li>
             <li><a href="https://www.eventbrite.ca/e/hacking-health-hamilton-hackthon-2018-tickets-41130549581?aff=ehomecard">Hacking Health Hackathon 2018 (Hamilton Site).</a></li>
             <li><a href="http://www.thespec.com/news-story/7202040-build-a-health-app-in-a-weekend-at-hamilton-event/">Build a health app in a weekend at Hamilton event</a>
                 - The Hamilton Spectator, Mar 22, 2017.
