--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@ layout: front
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail" style="background-color: red; color: white;">
-            <h2>Save the Date: Hacking Health Meetup March</h2>
+            <h2>Save the Date: Hacking Health Meetup April at DF/Net Software ULC</h2>
             <p>Meetup.
-            <p>March. 22, 2018
-            <p>Location: TBD
-            <p><a class="btn btn-default" href="https://www.meetup.com/Hacking-Health-Hamilton/events/246993621/">Info &amp; Tickets</a>
+            <p>April. 26, 2018
+            <p>Location: Suite 403, 55 Head Street · Dundas
+            <p><a class="btn btn-default" href="https://www.meetup.com/Hacking-Health-Hamilton/events/246993642/">Info &amp; Tickets</a>
         </div>
     </div>
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
         <div class="dummy" /></div>
         <div class="thumbnail">
-            <h2>Hackathon 2018 Sparkboard</h2>
-            <p>View ideas and express interest in projects on our Sparkboard.
-            <p><a class="btn btn-default" href="https://hhhamilton2018.sparkboard.com/">2018 Sparkboard</a>
+            <h2>HAMILTON HEALTH INNOVATION WEEK 2018</h2>
+            <p>April 23 to 29, Hamilton, Ontario.
+            <p><a class="btn btn-default" href="http://hamiltonhealthinnovationweek.ca/">More Information</a>
         </div>
     </div>
     <div class="col-xs-6 col-sm-4" style="margin-bottom:2em;">
